--- a/css/style-admin.css
+++ b/css/style-admin.css
@@ -196,7 +196,7 @@ header#side-bar-log #sidebar-wrapper nav#main-sidebar div#container-group-profil
 
 section#dashboard-page-default {
   padding-top: 40px;
-  padding-left: 50px;
+  padding-left: 100px;
 }
 section#dashboard-page-default div#container-dashboard-base .box-dashboard {
   width: 70%;
@@ -221,16 +221,79 @@ section#dashboard-page-default div#container-dashboard-base #container-home-tabs
   height: -moz-fit-content;
   height: fit-content;
 }
+section#dashboard-page-default div#container-dashboard-base #container-home-tabs ul.list-book-box li.list-book {
+  display: flex;
+  width: 100%;
+}
+section#dashboard-page-default div#container-dashboard-base #container-home-tabs ul.list-book-box li.list-book div.wish-list-book {
+  display: flex;
+  flex-wrap: wrap;
+  width: 40%;
+}
+section#dashboard-page-default div#container-dashboard-base #container-home-tabs ul.list-book-box li.list-book div.wish-list-book img.pict-book-wish {
+  height: 100px;
+  width: auto;
+}
+section#dashboard-page-default div#container-dashboard-base #container-home-tabs ul.list-book-box li.list-book div.wish-list-book ul.container-description-wish li.list-title {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+section#dashboard-page-default div#container-dashboard-base #container-home-tabs ul.list-book-box li.list-book div.wish-list-book ul.container-description-wish li.list-author {
+  font-size: 16px;
+  color: gray;
+}
+section#dashboard-page-default div#container-dashboard-base #container-home-tabs ul.list-book-box li.list-book div.container-loan-wish {
+  width: 60%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+section#dashboard-page-default div#container-dashboard-base #container-home-tabs ul.list-book-box li.list-book div.container-loan-wish p.info-disponibility-wish {
+  color: #ff5e38;
+  font-weight: bold;
+  margin-right: 70px;
+}
+section#dashboard-page-default div#container-dashboard-base #container-home-tabs ul.list-book-box li.list-book div.container-loan-wish a.btn-loan-wish {
+  padding: 15px;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  background-color: #0868ae;
+  color: #fff;
+  border-radius: 10px;
+  text-align: center;
+  transition: background-color 0.3s ease;
+}
+section#dashboard-page-default div#container-dashboard-base #container-home-tabs ul.list-book-box li.list-book div.container-loan-wish a.btn-loan-wish:hover {
+  background-color: #05497b;
+  cursor: pointer;
+}
 section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs {
   display: block;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
 }
 section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #container-fullname {
   display: flex;
   flex-wrap: wrap;
+  justify-content: flex-start;
   margin-bottom: 10px;
-  margin: 10px auto;
   width: -moz-fit-content;
   width: fit-content;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #container-fullname .input-fullname {
+  width: 400px;
+  height: 44px;
+  border-radius: 5px;
+  padding-left: 10px;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #container-fullname .label-fullname {
+  font-size: 14px;
+  color: #070606;
 }
 section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #container-fullname #firstname {
   display: flex;
@@ -241,11 +304,84 @@ section#dashboard-page-default div#container-dashboard-base div#container-profil
   display: flex;
   flex-direction: column;
 }
-section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #container-fullname #email {
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info div#email {
   display: flex;
   flex-direction: column;
+  margin-bottom: 15px;
 }
-section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #container-fullname #location {
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info div#email #label-email {
+  font-size: 14px;
+  color: #070606;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info div#email #input-mail {
+  width: 400px;
+  height: 44px;
+  border-radius: 5px;
+  padding-left: 10px;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #location {
   display: flex;
   flex-direction: column;
+  margin-bottom: 8px;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #location #label-location {
+  font-size: 14px;
+  color: #070606;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #location input {
+  width: 840px;
+  height: 44px;
+  border-radius: 5px;
+  padding-left: 10px;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #password {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #password #label-password {
+  font-size: 14px;
+  color: #070606;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #password #input-password {
+  width: 400px;
+  height: 44px;
+  border-radius: 5px;
+  padding-left: 10px;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #group-btn-form {
+  display: flex;
+  flex-wrap: wrap;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #group-btn-form button#btn-reset {
+  width: 80px;
+  height: 40px;
+  border-radius: 5px;
+  margin-right: 20px;
+  border: 1px solid #0868ae;
+  color: #0868ae;
+  background-color: #fff;
+  border-radius: 10px;
+  text-align: center;
+  transition: background-color 0.3s ease;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #group-btn-form button#btn-reset:hover {
+  background-color: #0868ae;
+  color: #fff;
+  cursor: pointer;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #group-btn-form button#btn-submit {
+  width: 80px;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  background-color: #0868ae;
+  color: #fff;
+  border-radius: 10px;
+  text-align: center;
+  transition: background-color 0.3s ease;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #group-btn-form button#btn-submit:hover {
+  background-color: #05497b;
+  cursor: pointer;
 }/*# sourceMappingURL=style-admin.css.map */
