--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -1,6 +1,7 @@
 $btn-red: #ff5e38;
 $btn-red-hover: #b53928;
 $main-blue: #0868ae;
+$btn-main-blue-over: #05497b;
 $white: #fff;
 $black: #070606;
 $footer: #043a61;
@@ -221,7 +222,7 @@ header#side-bar-log {
 
 section#dashboard-page-default {
   padding-top: 40px;
-  padding-left: 50px;
+  padding-left: 100px;
 
   div#container-dashboard-base {
     .box-dashboard {
@@ -246,19 +247,94 @@ section#dashboard-page-default {
     }
     #container-home-tabs {
       height: fit-content;
-      
+      ul.list-book-box {
+        li.list-book {
+          display: flex;
+          width: 100%;
+
+          div.wish-list-book {
+            display: flex;
+            flex-wrap: wrap;
+            width: 40%;
+
+            img.pict-book-wish {
+              height: 100px;
+              width: auto;
+            }
+
+            ul.container-description-wish {
+              li.list-title {
+                font-size: 16px;
+                font-weight: bold;
+                margin-bottom: 10px;
+              }
+
+              li.list-author {
+                font-size: 16px;
+                color: gray;
+              }
+            }
+          }
+          div.container-loan-wish {
+            width: 60%;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            p.info-disponibility-wish {
+              color: $btn-red;
+              font-weight: bold;
+              margin-right: 70px;
+            }
+
+            a.btn-loan-wish {
+              padding: 15px;
+              font-weight: bold;
+              border: none;
+              border-radius: 5px;
+              background-color: $main-blue;
+              color: $white;
+              border-radius: 10px;
+              text-align: center;
+              transition: background-color 0.3s ease;
+
+              &:hover {
+                background-color: #05497b;
+                cursor: pointer;
+              }
+            }
+          }
+        }
+      }
     }
 
     div#container-profil-tabs {
       display: block;
+
       div#box-personal-info {
         form#form-personal-info {
+          display: flex;
+          flex-wrap: nowrap;
+          flex-direction: column;
+
           #container-fullname {
             display: flex;
             flex-wrap: wrap;
+            justify-content: flex-start;
             margin-bottom: 10px;
-            margin: 10px auto;
             width: fit-content;
+
+            .input-fullname {
+              width: 400px;
+              height: 44px;
+              border-radius: 5px;
+              padding-left: 10px;
+            }
+
+            .label-fullname {
+              font-size: 14px;
+              color: $black;
+            }
+
             #firstname {
               display: flex;
               flex-direction: column;
@@ -268,20 +344,103 @@ section#dashboard-page-default {
               display: flex;
               flex-direction: column;
             }
+          }
 
-            #email {
-              display: flex;
-              flex-direction: column;
+          div#email {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 15px;
+
+            #label-email {
+              font-size: 14px;
+              color: $black;
             }
-            #location {
-              display: flex;
-              flex-direction: column;
+
+            #input-mail {
+              width: 400px;
+              height: 44px;
+              border-radius: 5px;
+              padding-left: 10px;
+            }
+          }
+
+          #location {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 8px;
+            #label-location {
+              font-size: 14px;
+              color: $black;
+            }
+
+            input {
+              width: 840px;
+              height: 44px;
+              border-radius: 5px;
+              padding-left: 10px;
+            }
+          }
+
+          #password {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 15px;
+
+            #label-password {
+              font-size: 14px;
+              color: $black;
+            }
+
+            #input-password {
+              width: 400px;
+              height: 44px;
+              border-radius: 5px;
+              padding-left: 10px;
+            }
+          }
+
+          #group-btn-form {
+            display: flex;
+            flex-wrap: wrap;
+
+            button#btn-reset {
+              width: 80px;
+              height: 40px;
+              border-radius: 5px;
+              margin-right: 20px;
+              border: 1px solid $main-blue;
+              color: $main-blue;
+              background-color: $white;
+              border-radius: 10px;
+              text-align: center;
+              transition: background-color 0.3s ease;
+
+              &:hover {
+                background-color: $main-blue;
+                color: $white;
+                cursor: pointer;
+              }
+            }
+
+            button#btn-submit {
+              width: 80px;
+              height: 40px;
+              border: none;
+              border-radius: 5px;
+              background-color: $main-blue;
+              color: $white;
+              border-radius: 10px;
+              text-align: center;
+              transition: background-color 0.3s ease;
+
+              &:hover {
+                background-color: #05497b;
+                cursor: pointer;
+              }
             }
           }
         }
       }
     }
-
-
   }
 }
