--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -14,10 +14,10 @@ $footer: #043a61;
   padding: 0;
 }
 
-.row-limit-size {
-  width: 100%;
-  max-width: 1440px;
-  margin: 0 auto;
+.row-limit-size-db {
+  padding-top: 40px;
+  padding-left: 100px;
+  padding: 40px 100px;
 }
 
 body {
@@ -66,10 +66,16 @@ a {
 }
 
 main {
-  width: 100vw;
+  width: 100%;
   padding-left: 100px;
   z-index: -1;
 }
+
+.active {
+  display: block;
+}
+
+// ----------  HEADER DASHBOARD  ----------
 
 header#side-bar-log {
   #sidebar-wrapper {
@@ -220,223 +226,333 @@ header#side-bar-log {
   }
 }
 
-section#dashboard-page-default {
-  padding-top: 40px;
-  padding-left: 100px;
+// ----------  CLASS COMMUNE - DASHBOARD ----------
 
-  div#container-dashboard-base {
-    .box-dashboard {
-      width: 70%;
-      height: fit-content;
-      background-color: #fff;
-      border-radius: 20px;
-      padding: 20px;
-      margin-bottom: 30px;
-      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+div.container-dashboard-base {
+  .box-dashboard {
+    width: 100%;
+    height: fit-content;
+    background-color: #fff;
+    border-radius: 20px;
+    padding: 20px;
+    margin-bottom: 30px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
-      hr {
-        width: 100%;
-        margin: 10px auto;
-      }
-
-      ul {
-        padding: 10px;
-        background-color: #f0f7ff;
-        border-radius: 5px;
-      }
+    hr {
+      width: 100%;
+      margin: 10px auto;
     }
-    #container-home-tabs {
-      height: fit-content;
-      ul.list-book-box {
-        li.list-book {
+
+    ul {
+      padding: 10px;
+      background-color: #f0f7ff;
+      border-radius: 5px;
+    }
+  }
+}
+
+// ----------  SECTION DASHBOARD - PAGE DEFAULT ----------
+
+section#dashboard-page-default {
+  .container-home-tabs {
+    height: fit-content;
+    ul.list-book-box {
+      li.list-book {
+        display: flex;
+        width: 100%;
+        margin-bottom: 50px;
+
+        div.wish-list-book {
           display: flex;
-          width: 100%;
+          flex-wrap: wrap;
+          width: 40%;
 
-          div.wish-list-book {
-            display: flex;
-            flex-wrap: wrap;
-            width: 40%;
+          img.pict-book-wish {
+            height: 100px;
+            width: auto;
+          }
 
-            img.pict-book-wish {
-              height: 100px;
-              width: auto;
+          ul.container-description-wish {
+            li.list-title {
+              font-size: 16px;
+              font-weight: bold;
+              margin-bottom: 10px;
+              color: $main-blue;
             }
 
-            ul.container-description-wish {
-              li.list-title {
-                font-size: 16px;
-                font-weight: bold;
-                margin-bottom: 10px;
-              }
-
-              li.list-author {
-                font-size: 16px;
-                color: gray;
-              }
+            li.list-author {
+              font-size: 16px;
+              color: gray;
             }
           }
-          div.container-loan-wish {
-            width: 60%;
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-            p.info-disponibility-wish {
-              color: $btn-red;
-              font-weight: bold;
-              margin-right: 70px;
-            }
+        }
+        div.container-loan-wish {
+          width: 60%;
+          display: flex;
+          flex-wrap: wrap;
+          align-items: center;
+          justify-content: space-evenly;
+          p.info-disponibility-wish {
+            color: $btn-red;
+            font-weight: bold;
+            margin-right: 70px;
+          }
 
-            a.btn-loan-wish {
-              padding: 15px;
-              font-weight: bold;
-              border: none;
-              border-radius: 5px;
-              background-color: $main-blue;
-              color: $white;
-              border-radius: 10px;
-              text-align: center;
-              transition: background-color 0.3s ease;
+          a.btn-loan-wish {
+            padding: 15px;
+            font-weight: bold;
+            border: none;
+            border-radius: 5px;
+            background-color: $main-blue;
+            color: $white;
+            border-radius: 10px;
+            text-align: center;
+            transition: background-color 0.3s ease;
 
-              &:hover {
-                background-color: #05497b;
-                cursor: pointer;
-              }
+            &:hover {
+              background-color: #05497b;
+              cursor: pointer;
             }
           }
         }
       }
     }
+  }
+}
 
-    div#container-profil-tabs {
-      display: block;
+section#dashboard-page-profil {
+  div#container-profil-tabs {
+    display: block;
 
-      div#box-personal-info {
-        form#form-personal-info {
+    div#box-personal-info {
+      form#form-personal-info {
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: column;
+
+        #container-fullname {
           display: flex;
-          flex-wrap: nowrap;
+          flex-wrap: wrap;
+          justify-content: flex-start;
+          margin-bottom: 10px;
+          width: fit-content;
+
+          .input-fullname {
+            width: 400px;
+            height: 44px;
+            border-radius: 5px;
+            padding-left: 10px;
+            border: 1px solid gray;
+          }
+
+          .label-fullname {
+            font-size: 14px;
+            color: $black;
+          }
+
+          #firstname {
+            display: flex;
+            flex-direction: column;
+            margin-right: 20px;
+          }
+          #lastname {
+            display: flex;
+            flex-direction: column;
+          }
+        }
+
+        div#email {
+          display: flex;
           flex-direction: column;
+          margin-bottom: 15px;
 
-          #container-fullname {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: flex-start;
-            margin-bottom: 10px;
-            width: fit-content;
-
-            .input-fullname {
-              width: 400px;
-              height: 44px;
-              border-radius: 5px;
-              padding-left: 10px;
-            }
-
-            .label-fullname {
-              font-size: 14px;
-              color: $black;
-            }
-
-            #firstname {
-              display: flex;
-              flex-direction: column;
-              margin-right: 20px;
-            }
-            #lastname {
-              display: flex;
-              flex-direction: column;
-            }
+          #label-email {
+            font-size: 14px;
+            color: $black;
           }
 
-          div#email {
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 15px;
+          #input-mail {
+            width: 400px;
+            height: 44px;
+            border-radius: 5px;
+            padding-left: 10px;
+            border: 1px solid gray;
+          }
+        }
 
-            #label-email {
-              font-size: 14px;
-              color: $black;
-            }
-
-            #input-mail {
-              width: 400px;
-              height: 44px;
-              border-radius: 5px;
-              padding-left: 10px;
-            }
+        #location {
+          display: flex;
+          flex-direction: column;
+          margin-bottom: 8px;
+          #label-location {
+            font-size: 14px;
+            color: $black;
           }
 
-          #location {
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 8px;
-            #label-location {
-              font-size: 14px;
-              color: $black;
-            }
+          input {
+            width: 840px;
+            height: 44px;
+            border-radius: 5px;
+            padding-left: 10px;
+            border: 1px solid gray;
+          }
+        }
 
-            input {
-              width: 840px;
-              height: 44px;
-              border-radius: 5px;
-              padding-left: 10px;
-            }
+        #password {
+          display: flex;
+          flex-direction: column;
+          margin-bottom: 15px;
+
+          #label-password {
+            font-size: 14px;
+            color: $black;
           }
 
-          #password {
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 15px;
-
-            #label-password {
-              font-size: 14px;
-              color: $black;
-            }
-
-            #input-password {
-              width: 400px;
-              height: 44px;
-              border-radius: 5px;
-              padding-left: 10px;
-            }
+          #input-password {
+            width: 400px;
+            height: 44px;
+            border-radius: 5px;
+            padding-left: 10px;
+            border: 1px solid gray;
           }
+        }
 
-          #group-btn-form {
-            display: flex;
-            flex-wrap: wrap;
+        #group-btn-form {
+          display: flex;
+          flex-wrap: wrap;
 
-            button#btn-reset {
-              width: 80px;
-              height: 40px;
-              border-radius: 5px;
-              margin-right: 20px;
-              border: 1px solid $main-blue;
-              color: $main-blue;
-              background-color: $white;
-              border-radius: 10px;
-              text-align: center;
-              transition: background-color 0.3s ease;
+          button#btn-reset {
+            width: 80px;
+            height: 40px;
+            border-radius: 5px;
+            margin-right: 20px;
+            border: 1px solid $main-blue;
+            color: $main-blue;
+            background-color: $white;
+            border-radius: 10px;
+            text-align: center;
+            transition: background-color 0.3s ease;
 
-              &:hover {
-                background-color: $main-blue;
-                color: $white;
-                cursor: pointer;
-              }
-            }
-
-            button#btn-submit {
-              width: 80px;
-              height: 40px;
-              border: none;
-              border-radius: 5px;
+            &:hover {
               background-color: $main-blue;
               color: $white;
-              border-radius: 10px;
-              text-align: center;
-              transition: background-color 0.3s ease;
+              cursor: pointer;
+            }
+          }
 
-              &:hover {
-                background-color: #05497b;
-                cursor: pointer;
-              }
+          button#btn-submit {
+            width: 80px;
+            height: 40px;
+            border: none;
+            border-radius: 5px;
+            background-color: $main-blue;
+            color: $white;
+            border-radius: 10px;
+            text-align: center;
+            transition: background-color 0.3s ease;
+
+            &:hover {
+              background-color: #05497b;
+              cursor: pointer;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+// ----------  SECTION DASHBOARD - PAGE CRUD----------
+
+section#dashboard-page-crud-book {
+  .container-crud-book-tabs {
+    height: fit-content;
+
+    div.info-crud-book {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+    }
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    input {
+      width: 30%;
+      height: 40px;
+      border-radius: 5px;
+      margin: 10px;
+    }
+
+    button {
+      height: 40px;
+    }
+
+    ul#info-top-crud {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+    }
+
+    ul.list-book-box {
+      li.list-book {
+        display: flex;
+        width: 100%;
+        margin-bottom: 50px;
+
+        div.wish-list-book {
+          display: flex;
+          flex-wrap: wrap;
+          width: 40%;
+
+          img.pict-book-wish {
+            height: 100px;
+            width: auto;
+          }
+
+          ul.container-description-wish {
+            li.list-title {
+              font-size: 16px;
+              font-weight: bold;
+              margin-bottom: 10px;
+              color: $main-blue;
+            }
+
+            li.list-author {
+              font-size: 16px;
+              color: gray;
+            }
+          }
+        }
+        div.container-loan-wish {
+          width: 60%;
+          display: flex;
+          flex-wrap: wrap;
+          align-items: center;
+          justify-content: space-evenly;
+          p.info-disponibility-wish {
+            color: $btn-red;
+            font-weight: bold;
+            margin-right: 70px;
+          }
+
+          a.btn-loan-wish {
+            padding: 15px;
+            font-weight: bold;
+            border: none;
+            border-radius: 5px;
+            background-color: $main-blue;
+            color: $white;
+            border-radius: 10px;
+            text-align: center;
+            transition: background-color 0.3s ease;
+
+            &:hover {
+              background-color: #05497b;
+              cursor: pointer;
             }
           }
         }
