--- a/css/style-book-detail.scss
+++ b/css/style-book-detail.scss
@@ -32,7 +32,7 @@ main {
           @media screen and (min-width: 950px) {
             font-size: 12px;
             padding: 6px 50px;
-            margin-bottom: -10px;
+            margin-bottom: 10px;
           }
         }
 
@@ -41,7 +41,9 @@ main {
           font-size: 20px;
           text-align: inherit;
           @media screen and (min-width: 950px) {
-            margin-bottom: -6px;
+            width: 90%;
+            line-height: 32px;
+            margin-bottom: 6px;
             font-size: 28px;
           }
         }
@@ -82,6 +84,7 @@ main {
           font-size: 14px;
           margin-bottom: 16px;
           @media screen and (min-width: 950px) {
+            width: 90%;
             font-size: 18px;
             margin-bottom: 26px;
           }
@@ -90,7 +93,7 @@ main {
         h3 {
           font-size: 20px;
           color: $main-blue;
-          margin-bottom: 6px;
+          margin-bottom: 14px;
           @media screen and (min-width: 950px) {
             font-size: 30px;
           }
@@ -146,6 +149,7 @@ main {
         }
 
         ul.info-work-description {
+          margin-top: 12px;
           li {
             font-size: 16px;
             color: gray;
@@ -164,7 +168,7 @@ main {
         }
 
         hr {
-          margin: 16px 0 30px;
+          margin: 16px 0 16px;
           border: 1px solid gray;
         }
 
@@ -315,11 +319,11 @@ main {
           }
 
           a.link-page {
+            position: absolute;
             font-size: 14px;
-            float: right;
+            bottom: 10px;
+            right: 10px;
             color: $main-blue;
-            margin-right: 10px;
-            margin-top: 20px;
           }
         }
       }
