--- a/css/style-catalogue.css
+++ b/css/style-catalogue.css
@@ -40,7 +40,7 @@ main #section-catalog h1 {
 main #section-catalog #container-catalog #container-filter {
   position: sticky;
   top: 80px;
-  bottom: 140px;
+  bottom: 80px;
   width: 100%;
   height: -moz-fit-content;
   height: fit-content;
@@ -147,11 +147,11 @@ main #section-catalog #container-catalog #container-cards .container-sort #sort 
 }
 main #section-catalog #container-catalog #container-cards .card {
   position: relative;
-  max-width: 500px;
-  min-width: 500px;
+  max-width: 530px;
+  min-width: 530px;
   width: 33%;
   margin: 100px auto 100px auto;
-  height: 230px;
+  height: 300px;
   margin-bottom: 40px;
   padding: 15px 5px 15px 200px;
   border-radius: 5px;
@@ -159,7 +159,7 @@ main #section-catalog #container-catalog #container-cards .card {
 }
 main #section-catalog #container-catalog #container-cards .card img {
   position: absolute;
-  top: -40px;
+  top: 10%;
   left: 25px;
   width: 150px;
   height: 230px;
@@ -172,26 +172,36 @@ main #section-catalog #container-catalog #container-cards .card img:hover {
   transform: translateY(-15px);
 }
 main #section-catalog #container-catalog #container-cards .card .bottom-item-card h4 {
-  margin: 5px 0;
+  margin: 15px 0;
   text-transform: capitalize;
+}
+main #section-catalog #container-catalog #container-cards .card .bottom-item-card h3.title-book-catalog {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: normal;
+  letter-spacing: 0.04em;
+  color: #0868ae;
+  text-overflow: ellipsis;
 }
 main #section-catalog #container-catalog #container-cards .card .bottom-item-card .title-card {
   font-size: 10px;
 }
 main #section-catalog #container-catalog #container-cards .card .bottom-item-card .description-card {
-  height: 60px;
+  min-height: 60px;
+  max-height: 100px;
   margin: 8px 0 8px;
+  width: 95%;
   font-size: 14px;
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 5;
 }
 main #section-catalog #container-catalog #container-cards .card .bottom-item-card a.link-page {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
   font-size: 14px;
-  float: right;
   color: #0868ae;
-  margin-right: 10px;
-  margin-top: 20px;
 }/*# sourceMappingURL=style-catalogue.css.map */
