--- a/css/style-catalogue.scss
+++ b/css/style-catalogue.scss
@@ -50,7 +50,7 @@ main {
         position: -webkit-sticky;
         position: sticky;
         top: 80px;
-        bottom: 140px;
+        bottom: 80px;
         width: 100%;
         height: fit-content;
         background-color: $white;
@@ -175,11 +175,11 @@ main {
 
         .card {
           position: relative;
-          max-width: 500px;
-          min-width: 500px;
+          max-width: 530px;
+          min-width: 530px;
           width: 33%;
           margin: 100px auto 100px auto;
-          height: 230px;
+          height: 300px;
           margin-bottom: 40px;
           padding: 15px 5px 15px 200px;
           border-radius: 5px;
@@ -187,7 +187,7 @@ main {
 
           img {
             position: absolute;
-            top: -40px;
+            top: 10%;
             left: 25px;
             width: 150px;
             height: 230px;
@@ -202,8 +202,17 @@ main {
 
           .bottom-item-card {
             h4 {
-              margin: 5px 0;
+              margin: 15px 0;
               text-transform: capitalize;
+            }
+
+            h3.title-book-catalog {
+              font-weight: bold;
+              font-size: 16px;
+              line-height: normal;
+              letter-spacing: 0.04em;
+              color: $main-blue;
+              text-overflow: ellipsis;
             }
 
             .title-card {
@@ -211,22 +220,24 @@ main {
             }
 
             .description-card {
-              height: 60px;
+              min-height: 60px;
+              max-height: 100px;
               margin: 8px 0 8px;
+              width: 95%;
               font-size: 14px;
               text-overflow: ellipsis;
               overflow: hidden;
               display: -webkit-box;
               -webkit-box-orient: vertical;
-              -webkit-line-clamp: 3;
+              -webkit-line-clamp: 5;
             }
 
             a.link-page {
+              position: absolute;
+              bottom: 10px;
+              right: 10px;
               font-size: 14px;
-              float: right;
               color: $main-blue;
-              margin-right: 10px;
-              margin-top: 20px;
             }
           }
         }
