--- a/css/style.scss
+++ b/css/style.scss
@@ -51,17 +51,6 @@ h2 {
   }
 }
 
-h3 {
-  font-family: "Nova Slim";
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 38px;
-  letter-spacing: 0.04em;
-  color: $main-blue;
-  text-overflow: ellipsis;
-}
-
 #sub-title {
   font-size: 14px;
   text-align: start;
@@ -491,7 +480,8 @@ h3 {
     border-radius: 20px;
     padding: 5px;
     background-color: #fff;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+      rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 
     @media screen and (min-width: 950px) {
       margin: 0 auto 130px;
@@ -663,7 +653,19 @@ h3 {
       height: 230px;
       padding: 15px 5px 15px 200px;
       border-radius: 5px;
+      background-color: $white;
       box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+      span.tag-new-index {
+        position: absolute;
+        top: -10px;
+        right: 0;
+        padding: 5px;
+        border-radius: 15px 0 15px 0;
+        background-color: $btn-red;
+        color: $white;
+
+      }
 
       img {
         position: absolute;
@@ -682,8 +684,20 @@ h3 {
 
       .bottom-item-card {
         h4 {
-          margin: 5px 0;
+          margin: 15px 0;
           text-transform: capitalize;
+        }
+
+        h3.title-card-index {
+          font-family: "Nova Slim";
+          font-style: normal;
+          font-weight: bold;
+          font-size: 16px;
+          line-height: normal;
+          letter-spacing: 0.04em;
+          color: $main-blue;
+          text-overflow: ellipsis;
+          margin-bottom: 12px;
         }
 
         .title-card {
@@ -691,24 +705,26 @@ h3 {
           text-transform: capitalize;
         }
 
-        .description-card {
-          height: 60px;
-          margin: 8px 0 8px;
-          font-size: 14px;
-          text-overflow: ellipsis;
-          overflow: hidden;
-          display: -webkit-box;
-          -webkit-box-orient: vertical;
-          -webkit-line-clamp: 3;
-        }
+        // .description-card {
+        //   height: 60px;
+        //   margin: 8px 0 8px;
+        //   font-size: 14px;
+        //   text-overflow: ellipsis;
+        //   overflow: hidden;
+        //   display: -webkit-box;
+        //   -webkit-box-orient: vertical;
+        //   -webkit-line-clamp: 3;
+        // }
 
         a.link-page {
+          position: absolute;
+          right: 10px;
+          bottom: 15px;
           font-size: 14px;
-          float: right;
           color: $main-blue;
           margin-right: 10px;
           margin-top: 20px;
-      }
+        }
       }
     }
   }
@@ -790,18 +806,18 @@ h3 {
 
   a {
     display: block;
-        margin: 0 auto;
-        width: 250px;
-        padding: 12px;
-        background-color: $btn-red;
-        color: $white;
-        border-radius: 10px;
-        text-align: center;
-        transition: background-color 0.3s ease;
+    margin: 0 auto;
+    width: 250px;
+    padding: 12px;
+    background-color: $btn-red;
+    color: $white;
+    border-radius: 10px;
+    text-align: center;
+    transition: background-color 0.3s ease;
 
-        &:hover {
-          background-color: $btn-red-hover;
-        }
+    &:hover {
+      background-color: $btn-red-hover;
+    }
   }
 }
 
@@ -811,7 +827,7 @@ h3 {
   padding-top: 120px;
   position: relative;
 
-  h3 {
+  h3#h3-tag {
     text-align: center;
   }
 
@@ -935,7 +951,7 @@ h3 {
   padding-top: 120px;
   padding-bottom: 60px;
 
-  h3 {
+  h3.h3-faq {
     text-align: center;
     margin-bottom: 80px;
   }
@@ -1058,7 +1074,7 @@ h3 {
   position: relative;
   padding-bottom: 150px;
 
-  h3 {
+  h3.h3-location {
     text-align: center;
     margin-bottom: 20px;
   }
@@ -1091,6 +1107,7 @@ h3 {
     align-items: center;
     margin-top: 500px;
     border-radius: 0 0 20px 20px;
+    background-color: $white;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
       rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 
