--- a/css/style-catalogue.scss
+++ b/css/style-catalogue.scss
@@ -148,6 +148,7 @@ main {
 
         .container-sort {
           width: 100%;
+          height: fit-content;
           display: flex;
           flex-wrap: wrap;
           justify-content: space-evenly;
