--- a/css/style-catalogue.css
+++ b/css/style-catalogue.css
@@ -123,6 +123,8 @@ main #section-catalog #container-catalog #container-cards {
 }
 main #section-catalog #container-catalog #container-cards .container-sort {
   width: 100%;
+  height: -moz-fit-content;
+  height: fit-content;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
