--- a/css/style.css
+++ b/css/style.css
@@ -140,9 +140,10 @@ h2 {
     display: block;
     position: absolute;
     right: 0;
-    top: 0;
+    top: 0px;
+    border: none;
     width: 150px;
-    padding: 12px;
+    padding: 15px;
     background-color: #ff5e38;
     color: #fff;
     border-radius: 10px;
