--- a/css/style.scss
+++ b/css/style.scss
@@ -146,9 +146,10 @@ h2 {
             display: block;
             position: absolute;
             right: 0;
-            top: 0;
+            top: 0px;
+            border: none;
             width: 150px;
-            padding: 12px;
+            padding: 15px;
             background-color: $btn-red;
             color: #fff;
             border-radius: 10px;
