--- a/css/style-connect.css
+++ b/css/style-connect.css
@@ -49,8 +49,8 @@ a {
 
 button {
   border-radius: 20px;
-  border: 1px solid #ff4b2b;
-  background-color: #ff4b2b;
+  border: 1px solid #ff5e38;
+  background-color: #ff5e38;
   color: #ffffff;
   font-size: 12px;
   font-weight: bold;
@@ -161,8 +161,7 @@ main #section-authentication .container.right-panel-active .overlay-container {
   transform: translateX(-100%);
 }
 main #section-authentication .overlay {
-  background: #ff416c;
-  background: linear-gradient(to right, #ff4b2b, #ff416c);
+  background: #0868ae;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 0;
