--- a/css/style-book-detail.scss
+++ b/css/style-book-detail.scss
@@ -35,7 +35,7 @@ main {
     padding: 30px ;
     box-shadow: 0px 20px 24px -4px rgba(16, 24, 40, 0.08),
       0px 8px 8px -4px rgba(16, 24, 40, 0.03);
-    border-radius: 2px;
+    border-radius: 10px;
 
     p#loan-confimation {
       font-size: 1.1rem;
@@ -51,7 +51,7 @@ main {
 
     p#book-title-box {
       color: $main-blue;
-      font-size: 18px;
+      font-size: 20px;
       font-weight: bold;
       font-family: "Nova Slim", cursive, sans-serif;
       margin-bottom: 10px;
@@ -75,7 +75,7 @@ main {
       bottom: 20px;
       border: 1px solid $main-blue;
       color: $main-blue;
-      padding: 10px;
+      padding: 10px 40px;
       border-radius: 10px;
 
 
@@ -165,11 +165,11 @@ section#section-detail-book {
         background-color: gray;
       }
 
-      h2 {
+      h2#title-extract {
         font-size: 20px;
         text-align: inherit;
+        margin-bottom: -5px;
         color: $main-blue;
-        margin-bottom: 6px;
         @media screen and (min-width: 950px) {
           font-size: 30px;
         }
@@ -185,10 +185,11 @@ section#section-detail-book {
         }
       }
 
-      h3 {
+      h3#info-technical {
         font-size: 20px;
+        font-family: 'Nova Slim', cursive, sans-serif;
         color: $main-blue;
-        margin-bottom: 14px;
+        margin-bottom: 20px;
         @media screen and (min-width: 950px) {
           font-size: 30px;
         }
@@ -211,11 +212,6 @@ section#section-detail-book {
             &:nth-child(odd) {
               background-color: #f2f2f2; /* couleur pour les éléments impairs */
             }
-
-            // &:nth-child(even) {
-            //   background-color: #ffffff; /* couleur pour les éléments pairs */
-            // }
-
           }
 
           span.bdd-var {
@@ -362,6 +358,7 @@ section#section-detail-book {
   padding-bottom: 60px;
   h3.standard-title-section {
     font-size: 30px;
+    font-family: 'Nova Slim', cursive, sans-serif;
     color: $main-blue;
     margin-top: 16px;
     margin-bottom: 6px;
@@ -410,6 +407,13 @@ section#section-detail-book {
           text-transform: capitalize;
         }
 
+        h3#title-book-card {
+          font-family: 'Nova Slim', cursive, sans-serif;
+          color: $main-blue;
+        }
+
+
+
         .title-card {
           font-size: 10px;
           text-transform: capitalize;
@@ -449,6 +453,7 @@ section#section-tag-recommandation {
   padding-bottom: 120px;
   h3.standard-title-section {
     font-size: 30px;
+    font-family: 'Nova Slim', cursive, sans-serif;
     color: $main-blue;
     margin-top: 16px;
     margin-bottom: 60px;
@@ -471,6 +476,8 @@ section#section-tag-recommandation {
 
       &:hover {
         cursor: pointer;
+        background-color: $main-blue;
+        color: $white;
       }
     }
   }
